<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/createSmokeSensor">

    <fragment
        android:id="@+id/createSmokeSensor"
        android:name="com.civilprotectionsensor.ui.fragments.FragmentCreateSmokeSensor"
        android:label="@string/title_smoke_create"
        tools:layout="@layout/fragment_create_smoke_sensor" />

    <fragment
        android:id="@+id/navigationGasSensor"
        android:name="com.civilprotectionsensor.ui.fragments.FragmentCreateGasSensor"
        android:label="@string/title_gas_create"
        tools:layout="@layout/fragment_create_gas_sensor" />

    <fragment
        android:id="@+id/navigationTempSensor"
        android:name="com.civilprotectionsensor.ui.fragments.FragmentCreateTempSensor"
        android:label="@string/title_temp_create"
        tools:layout="@layout/fragment_create_temp_sensor" />

    <fragment
        android:id="@+id/navigationUvSensor"
        android:name="com.civilprotectionsensor.ui.fragments.FragmentCreateUvSensor"
        android:label="@string/title_uv_create"
        tools:layout="@layout/fragment_create_temp_sensor" />

</navigation>