<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="25dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/publishTopicGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/publishTopicTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dip"
                android:layout_marginRight="35dip"
                android:text="@string/topicTextView"
                android:textStyle="bold"
                android:typeface="serif" />

            <EditText
                android:id="@+id/publishTopicEditText"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.22"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/topicPlaceholder"
                android:inputType="text"
                android:textCursorDrawable="@drawable/cursor_color"
                android:typeface="serif" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/publishMessageGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/publishTopicGroup"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/publishMessageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messageTextView"
                android:textStyle="bold"
                android:typeface="serif" />

            <EditText
                android:id="@+id/publishMessageEditText"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="0.22"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:ems="10"
                android:hint="@string/messagePlaceholder"
                android:inputType="textMultiLine"
                android:textCursorDrawable="@drawable/cursor_color"
                android:typeface="serif" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/publishQosGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/publishMessageGroup"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/publishQosTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:text="@string/qos"
                android:textStyle="bold"
                android:typeface="serif" />

            <RadioGroup
                android:id="@+id/publishQosRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/qos0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/holo_blue_dark"
                    android:text="@string/qos0"
                    android:typeface="serif" />

                <RadioButton
                    android:id="@+id/qos1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/holo_blue_dark"
                    android:text="@string/qos1"
                    android:typeface="serif" />

                <RadioButton
                    android:id="@+id/qos2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/holo_blue_dark"
                    android:checked="true"
                    android:text="@string/qos2"
                    android:typeface="serif" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="-20dp"
                android:gravity="center|end"
                android:padding="0dp">

                <TextView
                    android:id="@+id/publishRetainedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:text="@string/retainedTextView"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <CheckBox
                    android:id="@+id/publishRetainedCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/holo_blue_dark"
                    android:padding="0dp"
                    android:text="@string/empty" />

            </LinearLayout>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/publishButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/publishQosGroup"
            android:layout_marginTop="16dp"
            android:background="@drawable/round"
            android:text="@string/publishButton"
            android:textColor="#f0fff0"
            android:textStyle="bold"
            android:typeface="serif" />

    </RelativeLayout>

</ScrollView>